playground/kubernetes1/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: express-pod
spec:
  containers:
  - name: exppress-c
    image: scor32k/express
    ports:
    - containerPort: 5000
