playground/kubernetes1/services.yml
apiVersion: v1
kind: Service
metadata:
  name: express-service #
spec:
  type: NodePort
  selector:
    app: expressc
  ports:
    - port: 80 # Cluster Port
      targetPort: 5000 # Port in which app is running
      nodePort: 30007
